# ooze

./: .devinignore  .gitignore  DEVELOPING.md  README.md  TODO.md  meson.build  run-devkit.sh  test-sni-item.py  watch-devkit.sh
.cursor/rules/: ooze-avoid-libadwaita-defaults.mdc  ooze-gel-naming.mdc  ooze-global-menu.mdc  ooze-kit-buttons.mdc  ooze-kit-sidebar.mdc  ooze-kit-typography.mdc  ooze-stability.mdc
.github/workflows/: appimage.yml  ci.yml  deb.yml  pages.yml
common/: aqua-chrome.h  aqua-traffic.c  ooze-font.h
compositor/: main.c  ooze-appmenu-wayland.c  ooze-appmenu-wayland.h  ooze-aqua-draw.c  ooze-aqua-draw.h  ooze-aqua-menu.c  ooze-aqua-menu.h  ooze-autostart.c  ooze-autostart.h  ooze-dbusmenu.c  ooze-dbusmenu.h  ooze-desktop-icons.c  ooze-desktop-icons.h  ooze-dock-folder-popup.c  ooze-dock-folder-popup.h  ooze-dock-pins.c  ooze-dock-pins.h  ooze-dock-shell.c  ooze-dock-shell.h  ooze-flow-gpu.c  ooze-flow-gpu.h  ooze-flow.c  ooze-flow.h  ooze-foreign-gel.c  ooze-foreign-gel.h  ooze-global-menu.c  ooze-global-menu.h  ooze-lock.c  ooze-lock.h  ooze-magic-lamp.c  ooze-magic-lamp.h  ooze-notifications.c  ooze-notifications.h  ooze-pam-compat.h  ooze-pam-helper.c  ooze-panel.c  ooze-panel.h  ooze-plugin-priv.h  ooze-plugin.c  ooze-plugin.h  (+34 more)
data/: org.freedesktop.FileManager1.service  org.freedesktop.impl.portal.desktop.ooze.service  org.ooze.About.desktop  org.ooze.Command.desktop  org.ooze.Defaults.desktop  org.ooze.Ear.desktop  org.ooze.Eye.desktop  org.ooze.King.desktop  org.ooze.Launch.desktop  org.ooze.Monitor.desktop  org.ooze.Mouse.desktop  org.ooze.Pak.desktop  org.ooze.Scenery.desktop  org.ooze.Scenery.gschema.xml  org.ooze.Shot.desktop  org.ooze.Spot.desktop  org.ooze.Themes.desktop  org.ooze.Torrent.desktop  org.ooze.Watch.desktop  xsettingsd.conf
data/applications/: org.ooze.Pak.desktop
data/icons/: elementary-icons.tar.xz
data/pam/: ooze-lock
data/wayland-sessions/: ooze.desktop
data/xdg-config/: mimeapps.list  user-dirs.dirs
data/xdg-desktop-portal/: ooze-portals.conf
docs/: BUILDING.md  build-an-ooze-app.md
examples/: meson.build
examples/hello-ooze/: main.c  meson.build
ooze-about/: main.c  ooze-about-window.c  ooze-about-window.h  ooze-system-info.c  ooze-system-info.h
ooze-command/: main.c  ooze-command-window.c  ooze-command-window.h
ooze-defaults/: main.c  ooze-defaults-pane.c  ooze-defaults-pane.h  ooze-defaults-window.c  ooze-defaults-window.h
ooze-ear/: main.c  ooze-ear-pw.c  ooze-ear-pw.h  ooze-ear-window.c  ooze-ear-window.h  ooze-sound-pane.c  ooze-sound-pane.h
ooze-eye/: main.c  ooze-eye-window.c  ooze-eye-window.h
ooze-king/: main.c  ooze-king-window.c  ooze-king-window.h
ooze-kit/: ooze-about.c  ooze-about.h  ooze-action-bar.c  ooze-action-bar.h  ooze-application-window.c  ooze-application-window.h  ooze-application.c  ooze-application.h  ooze-button.c  ooze-button.h  ooze-draw.c  ooze-draw.h  ooze-feedback.c  ooze-feedback.h  ooze-grid-menu.c  ooze-grid-menu.h  ooze-icons.c  ooze-icons.h  ooze-init.c  ooze-init.h  ooze-palette.c  ooze-palette.h  ooze-pinline.c  ooze-pinline.h  ooze-popover.c  ooze-popover.h  ooze-scroll.c  ooze-scroll.h  ooze-segment.c  ooze-segment.h  ooze-surface.c  ooze-surface.h  ooze-theme.c  ooze-theme.h  ooze-toolbar.c  ooze-toolbar.h  ooze-window-actions.c  ooze-window-actions.h  oozekit.h
ooze-kit-factory/: main.c  ooze-kit-factory-window.c  ooze-kit-factory-window.h
ooze-launch/: main.c  ooze-launch-window.c  ooze-launch-window.h
ooze-monitor/: main.c  ooze-display-config.c  ooze-display-config.h  ooze-display-pane.c  ooze-display-pane.h  ooze-monitor-window.c  ooze-monitor-window.h
ooze-mouse/: main.c  ooze-mouse-pane.c  ooze-mouse-pane.h  ooze-mouse-window.c  ooze-mouse-window.h
ooze-pak/: main.c  ooze-pak-flatpak.c  ooze-pak-flatpak.h  ooze-pak-window.c  ooze-pak-window.h
ooze-scenery/: main.c  ooze-scenery-window.c  ooze-scenery-window.h
ooze-shot/: main.c  ooze-shot-window.c  ooze-shot-window.h
ooze-themes/: main.c  ooze-themes-pane.c  ooze-themes-pane.h  ooze-themes-window.c  ooze-themes-window.h
ooze-torrent/: COPYING.GPL  main.c  ooze-torrent-session.cc  ooze-torrent-session.h  ooze-torrent-window.c  ooze-torrent-window.h
ooze-ui/: ooze-gel.c  ooze-gel.h  ooze-header-bar.c  ooze-header-bar.h  ooze-traffic-lights.c  ooze-traffic-lights.h  ooze-window-chrome.c  ooze-window-chrome.h
ooze-watch/: main.c  ooze-watch-player.c  ooze-watch-player.h  ooze-watch-transport.c  ooze-watch-transport.h  ooze-watch-window.c  ooze-watch-window.h
packaging/appimage/: AppRun  ooze.desktop
packaging/deb/: control.in  ooze-session  ooze-session-env.sh  postrm  (+3 more)
portal/: main.c  org.freedesktop.impl.portal.xml  org.gnome.Mutter.ScreenCast.xml  portal-backend.c  portal-backend.h
scripts/: build-appimage.sh  build-deb.sh  bump-version.sh  capture-site-screenshots.sh  dev-install.sh  fetch-libtransmission.sh  fix-symbolic-svgs.py  install-appmenu.sh  install-elementary-icons.sh  install-spot-deps.sh  install-whitesur-theme.sh  ooze-dev  ooze-doctor  ooze-screencast-test.py  ooze-update  smoke-inkscape-global-menu.sh
shared/: ooze-color-scheme.c  ooze-color-scheme.h  ooze-dnd-bridge.c  ooze-dnd-bridge.h  ooze-foreign-gtk.c  ooze-foreign-gtk.h  ooze-icon-lookup.c  ooze-icon-lookup.h  ooze-shared-appmenu.c  ooze-shared-appmenu.h  ooze-shared-icons-gtk.c  ooze-shared-icons.c  ooze-shared-icons.h
site/: index.html
spot/: main.c  spot-actions.c  spot-fileops.c  spot-priv.h  spot-sidebar.c  spot-view-columns.c  spot-view-grid.c  spot-view-list.c  spot-window.c  spot-window.h
src/: main.c  my-aqua-draw.c  my-aqua-draw.h  my-aqua-menu.c  my-aqua-menu.h  my-desktop-icons.c  my-desktop-icons.h  my-dock.c  my-dock.h  my-global-menu.c  my-global-menu.h  my-icons-gtk.c  my-icons.c  my-icons.h  my-magic-lamp.c  my-magic-lamp.h  my-plugin.c  my-plugin.h  my-screen-transition.c  my-screen-transition.h  my-theme.c  my-theme.h  my-window.c  my-window.h
tests/: meson.build  ooze-app-smoke.c  ooze-flow-smoke.c  ooze-render-smoke.c  ooze-wallpaper-smoke.c  test-autostart.c
(+8 files in other folders)
